--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <a href="contact.html">Contact</a>
   </nav>
   
-  <p>You can play my most recent project here: 
-    <iframe style="width: 100%; height: 450px; overflow: hidden; border: none;" src="https://ajpowers334.github.io/CarolinaCanyonGame/index.html" title="Robot Runner" scrolling="no"></iframe>
-  </p>
+  <p>You can play my most recent project here:  </p>
+  
+  <iframe style="width: 100%; height: 450px; overflow: hidden; border: none;" src="https://ajpowers334.github.io/CarolinaCanyonGame/index.html" title="Robot Runner" scrolling="no"></iframe>
 
 
   <h1>Find All My Games on itch.io!</h1>
