Reorganize header and project introduction sections

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
 
+  <div class="header-container">
   <h1>Welcome to My Online Portfolio!</h1>
-  <p>Hi! I'm Austin, a passionate Game Designer and Developer. This is my corner of the internet where I share my projects, my process, and my love for creating interactive experiences.</p>
-
-  <p>You can play my most recent project here: 
-    <a href="https://ajpowers334.github.io/WebZip/" target="_blank">GAME</a>
-  </p>
-
   <nav>
     <a href="projects.html">Projects</a> |
     <a href="about.html">About</a> |
     <a href="contact.html">Contact</a>
   </nav>
+</div>
+
+<p>Hi! I'm Austin, a passionate Game Designer and Developer. This is my corner of the internet where I share my projects, my process, and my love for creating interactive experiences.</p>
+
+<p>You can play my most recent project here: 
+  <a href="https://ajpowers334.github.io/WebZip/" target="_blank">GAME</a>
+</p>
 
   <h1>Find All My Games on itch.io!</h1>
   <p>I publish many of my personal projects, game jam entries, and prototypes on my itch.io page. Dive in and see what I've been experimenting with!</p>
