--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <p><strong>Game Engines:</strong> Godot</p>
   <p><strong>Programming Languages:</strong> C#, Python, GDScript</p>
 
-  <p><a href="https://github.com/ajpowers334" target="_blank">GitHub</a></p>
+  <p>Explore my <a href="https://github.com/ajpowers334" target="_blank">GitHub</a></p>
 
 </body>
 </html>
