--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,13 @@
         </nav>
     </div>
         
-        <p>this is my contact page</p>
+        <h3>Partnerships Drive Progress</h3>
+
+        <p>I'm driven by the belief that the right partnership can turn a good idea into a game-changing reality. From the synergy of a great team to the strength of a strategic alliance, I value the connections that push boundaries and deliver exceptional results.</p>
+
+        <h3>Let's get Connected</h3>
+        <p>Ready to explore what we can achieve together? I'm always open to discussing new ideas, opportunities, and ways to collaborate.</p>
+
         
         <div class="links">
             <a href="https://www.linkedin.com/in/austin-vines-94621423b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FXe6TAEWThae6XNRgTMU7Q%3D%3D" class="link">
