Change header from 'Contact Me' to 'Contact Page'

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header-container">
-        <h1>Contact Me</h1>
+        <h1>Contact Page</h1>
         <nav>
             <a href="index.html">Home</a> |
             <a href="projects.html">Projects</a> |
